little grid layout added

--- a/address.html
+++ b/address.html
@@ -19,7 +19,7 @@
         <h2 class="text-dark">My Address Book</h2>
         <div class="border border-2 border-info shadow-lg p-3 bg-light">
             <div class="row">
-                <div class="col-12 col-md-4">
+                <div class="d-grid col-12 col-md-4 justify-content-center align-items-center">
                     <img src="/img/GirlOne_4x.png" alt="Girl's Face" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-8">
